# puzzle-theory

./: Cargo.toml  TODO.md
src/: lib.rs  numbers.rs  span.rs  union_find.rs
src/ksolve/: mod.rs
src/permutations/: mod.rs  schreier_sims.rs
src/puzzle_geometry/: edge_cloud.rs  exact_trig.rs  knife.rs  mod.rs  num.rs  parsing.rs  shapes.rs
