[package]
name = "puzzle-theory"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
bnum = "0.13.0"
chumsky = "0.12.0"
internment = { version = "0.8.6", features = ["arc"] }
itertools = "0.14.0"
phf = { version = "0.11.3", features = ["macros"] }
thiserror = "2.0"
algebraics = { git = "https://github.com/qter-project/algebraics", branch = "prevent-exploding-ranges" }
boxcar = "0.2.14"
num-bigint = "0.4.6"
num-rational = "0.4.2"
# algebraics = { git = "https://github.com/Xendergo/algebraics" }
# algebraics = { path = "../../../algebraics" }
